# libanyar

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  PLAN.md  README.md  run.sh
.circleci/: config.yml
.github/: copilot-instructions.md
cli/: CLAUDE.md  CMakeLists.txt
cli/.copilot/: instructions.md
cli/src/: cli.h  cmd_build.cpp  cmd_dev.cpp  cmd_init.cpp  cmd_package.cpp  main.cpp  templates.cpp  util.cpp
cmake/: AnyarEmbed.cmake
core/: CMakeLists.txt
core/.copilot/: instructions.md
core/include/anyar/: app.h  app_config.h  command_registry.h  embed.h  event_bus.h  gtk_dispatch.h  ipc_router.h  main_thread.h  pinhole.h  plugin.h  shared_buffer.h  types.h  window.h  window_manager.h
core/include/anyar/plugins/: clipboard_plugin.h  db_plugin.h  dialog_plugin.h  fs_plugin.h  shell_plugin.h
core/src/: app.cpp  command_registry.cpp  event_bus.cpp  ipc_router.cpp  main_thread_linux.cpp  pinhole_linux.cpp  pinhole_stub.cpp  shared_buffer_linux.cpp  window.cpp  window_manager.cpp
core/src/plugins/: clipboard_linux.cpp  clipboard_plugin.cpp  db_plugin.cpp  dialog_linux.cpp  dialog_plugin.cpp  fs_plugin.cpp  shell_plugin.cpp
docs/: README.md  building-first-app.md  database-integration.md  decisions.md  dialogs.md  getting-started.md  graceful-shutdown.md  multi-window.md  packaging.md  pinhole-rendering.md  progress.md  roadmap.md  shared-memory-webgl.md  writing-plugins.md
examples/.copilot/: instructions.md
examples/hello-world/: CMakeLists.txt  README.md
examples/hello-world/frontend/: index.html  package-lock.json  package.json  vite.config.js
examples/hello-world/frontend/src/: App.jsx  style.css
examples/hello-world/src-cpp/: main.cpp
examples/key-storage/: CMakeLists.txt  README.md
examples/key-storage/frontend/: index.html  package-lock.json  package.json  vite.config.js
examples/key-storage/frontend/src/: App.svelte  EntryDetail.svelte  EntryDetailPage.svelte  EntryList.svelte  GroupTree.svelte  PasswordDialog.svelte  Toolbar.svelte  UnlockDialog.svelte  app.css  main.js
examples/key-storage/src-cpp/: keystore_plugin.cpp  keystore_plugin.h  main.cpp
examples/pinhole-hello/: CMakeLists.txt
examples/pinhole-hello/frontend/: index.html
examples/pinhole-hello/src-cpp/: main.cpp
examples/video-player/: CMakeLists.txt  README.md
examples/video-player/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
examples/video-player/frontend/src/: App.svelte  BitrateChart.svelte  VideoPlayer.svelte  Waveform.svelte  app.css
examples/video-player/src-cpp/: main.cpp  video_plugin.cpp  video_plugin.h
examples/wifi-analyzer/: CMakeLists.txt  README.md
examples/wifi-analyzer/frontend/: index.html  package-lock.json  package.json
examples/wifi-analyzer/frontend/src/: App.svelte  app.css
examples/wifi-analyzer/src-cpp/: main.cpp  wifi_plugin.cpp  wifi_plugin.h
js-bridge/: package-lock.json  package.json  tsconfig.cjs.json  tsconfig.esm.json  typedoc.json  vitest.config.ts
js-bridge/.copilot/: instructions.md
js-bridge/src/: config.test.ts  config.ts  events.test.ts  events.ts  global.d.ts  index.ts  invoke.test.ts  invoke.ts  react.test.tsx  react.ts  types.ts
js-bridge/src/modules/: buffer.test.ts  buffer.ts  canvas.ts  db.test.ts  db.ts  dialog.test.ts  dialog.ts  event.ts  fs.test.ts  fs.ts  pinhole.test.ts  pinhole.ts  shell.test.ts  shell.ts  window.test.ts  window.ts
scripts/: setup-ubuntu.sh
tests/: CMakeLists.txt  test_command_registry.cpp  test_event_bus.cpp  test_fs_plugin.cpp  test_integration.cpp  test_main.cpp  test_pinhole_linux.cpp  test_shared_buffer.cpp  test_shell_plugin.cpp  test_types.cpp
tests/.copilot/: instructions.md
tests/webgl/: CMakeLists.txt  main.cpp
tests/window_close/: CMakeLists.txt  main.cpp
